--- a/style.css
+++ b/style.css
@@ -13,24 +13,34 @@ body {
 }
 
 .header {
-    height: 200px;
+    height: 210px;
     width: 840px;
     /*background-color: red;*/
 }
 
 .main {
-    height: 483px;
+    height: 573px;
     width: 840px;
     /*background-color: blue;*/
     display: flex;
     justify-content: space-between;
+    align-content: stretch;
     flex-wrap: wrap;
 }
 
 .footer {
-    height: 200px;
+    height: 150px;
     width: 840px;
-    /*background-color: green;*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.image {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 p {
