--- a/style.css
+++ b/style.css
@@ -15,13 +15,44 @@ body {
 .header {
     height: 210px;
     width: 840px;
-    /*background-color: red;*/
+    display: flex;
+}
+
+.header-left {
+    height: 100%;
+    width: 32%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+}
+
+.image-logo {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 10%;
+}
+
+.label-logo {
+    font-size: 12px;
+    font-family: "Tahoma", sans-serif;
+    margin-top: 3%;
+}
+
+.palm {
+    position: absolute;
+}
+
+.header-right {
+    height: 100%;
+    width: 50%;
+    /*background-color: blue;*/
 }
 
 .main {
     height: 573px;
     width: 840px;
-    /*background-color: blue;*/
     display: flex;
     justify-content: space-between;
     align-content: stretch;
@@ -35,7 +66,7 @@ body {
     justify-content: center;
     align-items: flex-start;
     font-size: 12px;
-    font-family: "Tahoma";
+    font-family: "Tahoma", sans-serif;
     color: rgb(230,230,230);
 }
 
@@ -46,11 +77,13 @@ body {
     align-items: center;
 }
 
+.country {
+    border:4px groove #989898;
+}
+
 label {
     color: rgb(230,230,230);
 }
 
-img {
-    border:4px groove #989898;
-}
+
 
